CHANGELOG

Version 1.1
 - Enhancing PAWNING MODULE

Version 1.0.1
 - Change OR layout from 4.5 to 9" height
 - OR includes the duplicate
 - Loan, Money Transfer and Client TAB fix
 - Money Transfer - Enable multiple encoding
 - Money Transfer - swap label for Pay-Out and Send In
 - Sequence Report - Remove Borrowings and Insurance for redundancy
 - Sequence Report - Categories (Pera Padala ONLY)
 - Loan Register Report - Remove PHP sign to increase space
 - Loan - Recompute when changing TYPE